test/corpus/test_query_matches_with_named_wildcard.txt
================
Unnamed wildcard
================

(return_statement (_))

---

(query
  (pattern
    pattern: (named_node
      (node_name)
      (child pattern: (wildcard_node)))))


==============
Named wildcard
==============

(binary_expression operator: _)

---

(query
  (pattern
    pattern: (named_node
      (node_name)
      (child (field_name) pattern: (wildcard_node)))))
